--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -13,8 +13,8 @@
     <%= f.text_field :category_id %>
   </p>
   <p>
-    <%= f.label :expense_id %><br />
-    <%= f.text_field :expense_id %>
+    <%= f.label :obj_expense_id %><br />
+    <%= f.text_field :obj_expense_id %>
   </p>
   <p>
     <%= f.label :vendor_id %><br />
