--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -14,7 +14,7 @@
 </p>
 <p>
   <strong>Expense:</strong>
-  <%=h @expense.expense_id %>
+  <%=h @expense.obj_expense_id %>
 </p>
 <p>
   <strong>Vendor:</strong>
