--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,8 +1,8 @@
 <% title "Expenses" %>
 
+<%= will_paginate(@expenses) %>
 <table>
   <tr>
-    <th>Year</th>
     <th>Amount</th>
     <th>Category</th>
     <th>Expense</th>
@@ -11,17 +11,14 @@
   </tr>
   <% for expense in @expenses %>
     <tr>
-      <td><%=h expense.year %></td>
       <td><%=h expense.amount %></td>
-      <td><%=h expense.category_id %></td>
-      <td><%=h expense.expense_id %></td>
-      <td><%=h expense.vendor_id %></td>
+      <td><%=h expense.category.name %></td>
+      <td><%=h expense.obj_expense.name %></td>
+      <td><%=h expense.vendor.name %></td>
       <td><%=h expense.payment_date %></td>
-      <td><%= link_to "Show", expense %></td>
-      <td><%= link_to "Edit", edit_expense_path(expense) %></td>
-      <td><%= link_to "Destroy", expense, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
   <% end %>
 </table>
+<%= will_paginate(@expenses) %>
 
 <p><%= link_to "New Expense", new_expense_path %></p>
