--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,14 +6,14 @@
     <th>Amount</th>
     <th>Expense</th>
     <th>Vendor</th>
-    <th>Payment Date</th>
+    <th>Date</th>
   </tr>
   <% for expense in @expenses %>
     <tr>
       <td><%=h expense.amount %></td>
       <td><%=h expense.obj_expense.name %></td>
       <td><%= link_to h(expense.vendor.name), expense.vendor %></td>
-      <td><%=h expense.payment_date %></td>
+      <td><%=h expense.payment_date.strftime("%m/%d/%Y") %></td>
     </tr>
   <% end %>
 </table>
