--- a/app/views/obj_expenses/show.html.erb
+++ b/app/views/obj_expenses/show.html.erb
@@ -1,11 +1,10 @@
-<% title "Expenses" %>
+<% title @obj_expense.name %>
 
 <%= will_paginate(@expenses) %>
 <table>
   <tr>
     <th>Amount</th>
     <th>Category</th>
-    <th>Expense</th>
     <th>Vendor</th>
     <th>Date</th>
   </tr>
@@ -13,7 +12,6 @@
     <tr>
       <td><%=h expense.amount %></td>
       <td><%= link_to h(expense.category.name), expense.category %></td>
-      <td><%= link_to h(expense.obj_expense.name), expense.obj_expense %></td>
       <td><%= link_to h(expense.vendor.name), expense.vendor %></td>
       <td><%=h expense.payment_date.strftime("%m/%d/%Y") %></td>
     </tr>
